--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
  
 <body class="page">
     <header>
-        <a href="/"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
+        <a href="../goit-markup-hw-02/index.html"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
         <nav>
             <ul>
             <li class="header-item"><a href="">Студия</a></li>
-            <li class="header-item"><a href="">Портфолио</a></li>
+            <li class="header-item"><a href="../goit-markup-hw-02/portfolio.html">Портфолио</a></li>
             <li class="header-item"><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -104,7 +104,7 @@
 
     <footer class="footer">
         <nav>
-        <span class="web-footer">Web</span><span class="studio-footer">Studio</span>
+        <a href="../goit-markup-hw-02/index.html"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <div><a class="email-footer" href="mailto:info@example.com">info@example.com</a></div>
         <div><a class="phone-number-footer" href="tel:+380991111111">+38 099 111 11 11</a></div>
