--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
@@ -10,7 +10,7 @@
 </head>
 <body class="page">
     <header>
-        <a href="/"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
+        <a href="../goit-markup-hw-02/index.html"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
         <nav>
             <ul>
             <li class="header-item"><a href="">Студия</a></li>
@@ -40,16 +40,6 @@
         </ul>
     </nav>
     </section>
-
-
-    <footer class="footer">
-        <nav>
-        <a href="/"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <div><a class="email-footer" href="mailto:info@example.com">info@example.com</a></div>
-        <div><a class="phone-number-footer" href="tel:+380991111111">+38 099 111 11 11</a></div>
-        </nav>
-    </footer>
 
     <section class="projects">
 
@@ -112,5 +102,15 @@
 
     </section>
     
+    <footer class="footer">
+        <nav>
+            <a href="../goit-markup-hw-02/index.html"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <div><a class="email-footer" href="mailto:info@example.com">info@example.com</a></div>
+        <div><a class="phone-number-footer" href="tel:+380991111111">+38 099 111 11 11</a></div>
+        </nav>
+    </footer>
+
+
 </body>
 </html>
