delete hover from h1-h3, p
Also buttons was updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="../goit-markup-hw-02/index.html"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
         <nav>
             <ul>
-            <li class="header-item"><a href="">Студия</a></li>
+            <li class="header-item"><a href="../goit-markup-hw-02/index.html">Студия</a></li>
             <li class="header-item"><a href="../goit-markup-hw-02/portfolio.html">Портфолио</a></li>
             <li class="header-item"><a href="">Контакты</a></li>
             </ul>
