--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
         <a href="../goit-markup-hw-02/index.html"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
         <nav>
             <ul>
-            <li class="header-item"><a href="">Студия</a></li>
-            <li class="header-item"><a href="">Портфолио</a></li>
+            <li class="header-item"><a href="../goit-markup-hw-02/index.html">Студия</a></li>
+            <li class="header-item"><a href="../goit-markup-hw-02/portfolio.html">Портфолио</a></li>
             <li class="header-item"><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -32,11 +32,11 @@
     <section class="buttons">
     <nav>
         <ul>
-            <li><a href="" class="button">Все</a></li>
-            <li><a href="" class="button">Веб-сайты</a></li>
-            <li><a href="" class="button">Приложения</a></li>
-            <li><a href="" class="button">Дизайн</a></li>
-            <li><a href="" class="button">Маркетинг</a></li>
+            <li><button class="primary-button"><a href="" class="button">Все</a></button></li>
+            <li><button class="primary-button"><a href="" class="button">Веб-сайты</a></button></li>
+            <li><button class="primary-button"><a href="" class="button">Приложения</a></button></li>
+            <li><button class="primary-button"><a href="" class="button">Дизайн</a></button></li>
+            <li><button class="primary-button"><a href="" class="button">Маркетинг</a></button></li>
         </ul>
     </nav>
     </section>
