--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <header>
         <a href="../goit-markup-hw-02/index.html"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
         <nav>
-            <ul>
+            <ul class="header-list">
             <li class="header-item"><a href="../goit-markup-hw-02/index.html">Студия</a></li>
             <li class="header-item"><a href="../goit-markup-hw-02/portfolio.html">Портфолио</a></li>
             <li class="header-item"><a href="">Контакты</a></li>
